--- a/espiritismo.html
+++ b/espiritismo.html
@@ -58,84 +58,207 @@
       </div>
       <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-          <iframe width="250" height="160" src="https://www.youtube.com/embed/5pGZJA_GDys" frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen></iframe>
+          <figure>
+           <iframe width="250" height="160" src="https://www.youtube.com/embed/5pGZJA_GDys" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           <figcaption><h6>Paulo e Estevão 1/18</h6></figcaption>
+           <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>          
           <iframe width="250" height="160" src="https://www.youtube.com/embed/xGiwJ0EMGx4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 2/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/S_DSDwDJL-o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 3/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/jgUSQXnrczc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 4/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/go9Wa32_m6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 5/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/hZb2oBWAwKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 6/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/12gkJxq61Kc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 7/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/HnT8_AcJRHY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 8/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/Ofc7Sm5k6AU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 9/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/ozeqTRzlp8k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 10/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/W7PgexAT_x0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 11/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/VXjWkSVi_EA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 12/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/FdfX23RF7to" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 13/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/MKGNU-Qu5Rk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 14/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/WzcV31Aj89E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 15/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/Gvgb22Gei3w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 16/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/4dwOwgalcPI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 17/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/vx8vtap-1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão 18/18</h6></figcaption>
+          <p></p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/RvZNQLoHbLk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 3, II (1/4)</h6></figcaption>
+          <p>Lutas e Humilhações</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/gjOS8qEtpIQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 3, II (2/4)</h6></figcaption>
+          <p>Lutas e Humilhações</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/zQ-MS9jpGT8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 3, II (3/4)</h6></figcaption>
+          <p>Lutas e Humilhações</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/n8d_j8uOrQI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 3, II (4/4)</h6></figcaption>
+          <p>Lutas e Humilhações</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/LaZnf4dVZBI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 4 (parte II)</h6></figcaption>
+          <p>Primeiros Labores Apostólicos</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/GWKG1bNQYCc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 5 (parte II)</h6></figcaption>
+          <p>Lutas pelo Evangelho</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/lp2Hlwk1f4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 6 (parte II)</h6></figcaption>
+          <p>Peregrinações e Sacrifícios</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
           <iframe width="250" height="160" src="https://www.youtube.com/embed/OZOyP6-WqmY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 7 (parte II)</h6></figcaption>
+          <p>As Epístolas</p>
+          </figure>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
+            <iframe width="250" height="160" src="https://www.youtube.com/embed/jNFv8Kk3n1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 8 (parte II)</h6></figcaption>
+          <p>O Martírio em Jerusalém</p>
+          </figure>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
+            <iframe width="250" height="160" src="https://www.youtube.com/embed/YyvxPEvlV20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 9 (parte II)</h6></figcaption>
+          <p>O Prisioneiro do Cristo</p>
+          </figure>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+          <figure>
+            <iframe width="250" height="160" src="https://www.youtube.com/embed/9Ovlgx__Qko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption><h6>Paulo e Estevão - Cap. 10 (parte II)</h6></figcaption>
+          <p>Ao Encontro do Mestre</p>
+          </figure>
         </div>
       </div>
     </div>
