Atualização de Versão #2, de 10/03/2022: Destacadas as classes do NAVLINK.

--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         <ul class="navbar-nav ml-auto">
           <!-- <li class="nav-item"><a class="nav-link">Instituto Instituto Ser Integral</a></li> -->
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <a class="nav-link" href="blog.html"><strong>Blog</strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Preparatório Colégio Militar</a>
