--- a/espiritismo.html
+++ b/espiritismo.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="africa.html">África - Ensino Médio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="espiritismo.html">Espiritismo</a>
+              <a class="nav-link" href="espiritismo.html"><strong>Espiritismo</strong></a>
           </li>
           </ul>
         </div>
