--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -29,10 +29,10 @@
             <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Preparatório Colégio Militar</a>
+            <a class="nav-link" href="#"><strong>Preparatório Colégio Militar</strong></a>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
-              <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
+              <li class="nav-item"><a class="nav-link" href="turmaavancada.html"><strong>Turma Avançada</strong></a></li>
             </ul>
           </li>
           <li class="nav-item">
