--- a/prep-if.html
+++ b/prep-if.html
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
+                        <a class="nav-link" href="prep-if.html"><strong>Preparatório IFMS</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="africa.html">África - Ensino Médio</a>
