--- a/turmainiciante.html
+++ b/turmainiciante.html
@@ -27,9 +27,9 @@
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Preparatório Colégio Militar</a>
+                        <a class="nav-link" href="#"><strong>Preparatório Colégio Militar</strong></a>
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item"><a class="nav-link" href="turmainiciante.html">Turma Iniciante</a></li>
+                            <li class="nav-item"><a class="nav-link" href="turmainiciante.html"><strong>Turma Iniciante</strong></a></li>
                             <li class="nav-item"><a class="nav-link" href="turmaavancada.html">Turma Avançada</a></li>
                         </ul>
                     </li>
