Atualização de Versão #3, de 10/03/2022: Atualizados os materiais de aula do IF.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -114,47 +114,67 @@
         <h6 class="blog">Matemática</h6>
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1K1p_K6Kbm1hpfMBUkSsJSQqs1YftT2ta/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>08/03/2022<br>Tratamento da Informação<br>Prof.º Marcelo</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1sK_2p4NWq8ZLG6cmARhIvKdBXDDuX-W-/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Teorema de Pitágoras</figcaption>
+              <p>Prof.º João Carlos<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1h28DSewOW3WfmPWHJ3WnG6Cwg82fluLk/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Teorema de Pitágoras - Exercícios</figcaption>
+              <p>Prof.º João Carlos<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1ENEo_EVLdDBAketR0455eyqtoWp_h_22/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Regra de Três e Porcentagem</figcaption>
+              <p>Prof.º Kauê Esselin<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1nK43wO_w6ykrkcm36bn1tECrKy4Ju3Em/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Funções</figcaption>
+              <p>Prof.º Roberti André<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/11jZ0nuE1ixHLzjCNr1Izsrv0uFB504p0/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Funções - Exercícios</figcaption>
+              <p>Prof.º Roberti André<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1K1p_K6Kbm1hpfMBUkSsJSQqs1YftT2ta/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Tratamento da Informação</figcaption>
+              <p>Prof.º Marcelo<br>08/03/2022</p>
+            </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1TFyEt6Bwejcs5ZahCMzlIstdgpdWdveX/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>06/07/2021 - Lista de Exercícios <br> Regra de Três <br> Prof.º Roberti Filho</p>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1QXL39UAib6poCIrh508QN93uWFQ2JQGw/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>22/06/2021 - Exame de Seleção 2015 <br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/10S_ntLVEP-OsDmhH_zHfQ1gLhKB7HOzK/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>Equações do 2º Grau - Parte 1/6<br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1mPJVyHPfMctk4xqpgXBggbl8NRMUDddw/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>Equações do 2º Grau - Parte 2/6<br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1pJ_pECW-oZ3wkJXFPPmjTvlJMNImMpUr/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>Revisão de Matemática<br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1rM8swcW-e-OhF6VObPH3ptfPrkXU_pSJ/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Relações Métricas do Triângulo Retângulo<br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1zZvVOvZGl2hg8oDaqNJmMFwvM98yUGYR/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Teorema de Pitágoras<br> Prof.º João Carlos</p>
-          </div>
-          <div class="col-12">
-            <iframe src="https://drive.google.com/file/d/1hry2nnW49tGZ9rZurSK9BoU0m6H7MgpB/preview" width="200" height="260" allow="autoplay"></iframe>
-            <p>Equações do 1º Grau<br> Prof.º João Carlos</p>
-          </div>
         </div>
         <h6 class="blog"><a name="if-port">Português</a></h6>
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
-            <iframe src="https://drive.google.com/file/d/1QztLZ9bx6ZcvsSQykfMt0RcI0Um6Xzv6/preview" allow="autoplay"></iframe>
-            <p>08/03/2022<br>Português - Aula 01<br>Concordância Nominal<br> Profª Inês</p>
+           <figure>
+            <iframe src="https://drive.google.com/file/d/1aO4hNNqYVkbq7BuFiWBznMijg_6IilDm/preview" width="200" height="260" allow="autoplay"></iframe>
+            <figcaption>Classes de Palavras - Exercícios</figcaption>
+            <p>Profª Jaqueline<br>10/03/2022</p>
+           </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+           <figure>
+            <iframe src="https://drive.google.com/file/d/1QztLZ9bx6ZcvsSQykfMt0RcI0Um6Xzv6/preview" width="200" height="260" allow="autoplay"></iframe>
+            <figcaption>Concordância Nominal</figcaption>
+            <p>Aula 01 - Profª Inês<br>08/03/2022</p>
+           </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <iframe src="https://drive.google.com/file/d/1jZGWwEEKketDJCPPDP3WDlpfA58G2Z_D/preview" allow="autoplay"></iframe>
