Atualização de Versão #6, de 10/03/2022: Ajustes nas informações do material de aula da Turma Avançada.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -91,12 +91,13 @@
          </div>
     </div>
         <h6 class="blog"><a name="cm-avancada-mat">Preparatório CM - Turma Avançada</a></h6>
-        <h6 class="blog">Clique no botão abaixo para acessar nosso canal no YouTube <br> Matemática e Português</h6>
+        <h6 class="blog">Matemática e Português</h6>
         <div class="row text-center padding">
           <div class="col-12 social">
+            <p>Clique no botão abaixo para acessar nosso canal no YouTube...</p>
             <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
                 <i class="fab fa-youtube"></i></a>
-                <p>Canal do YouTube, onde temos mais de 3 mil questões resolvidas de vários Colégios Militares de todo país.</p>
+                <p>...onde temos mais de 3 mil questões resolvidas de vários Colégios Militares de todo país.</p>
           </div>
         </div>
         <h6 class="blog"><a name="cm-avancada-port">Português</a></h6>
