Atualização de Versão de 23/03/2022: Centralizado o texto do cabeçalho da página Provas e Simulados. Incluído novos Materiais de Apoio.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -70,22 +70,69 @@
       <h6 class="blog"><a name="cm-iniciante-port">Português</a></h6>
       <div class="row text-center padding"> 
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-            <iframe src="https://drive.google.com/file/d/1jvoGMNBy0TnfWVRhkj_ymWmlqCkieVvy/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>09/03/2022<br>Redação - Aula 1<br> Prof.ª Giovana</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1Jj6IJLk5kUJ1F_-KoPwdep6jH-MMaS13/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Observações sobre o Texto Narrativo</figcaption>
+              <p>Aula Prof.ª Andrea<br>23/03/2022</p>
+            </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-           <iframe src="https://drive.google.com/file/d/16OuN43kSsfgs3e44FAofnCzBEk3MGFCu/preview" width="200" height="260" allow="autoplay"></iframe>
-           <p>07/03/2022<br>Redação - Letras Maiúsculas e Minúsculas<br> Prof.ª Alexandra</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1cGc3yx1HaQ2g5IBQIpaxVVdZ1v9NclBx/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Texto 6 - Um Belo Espetáculo</figcaption>
+              <p>Aula Prof.ª Juliana<br>23/03/2022</p>
+            </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
-           <iframe src="https://drive.google.com/file/d/1BBl1qCcTxHYTblJtsuY-B6fs2s6s1_Lq/preview" width="200" height="260" allow="autoplay"></iframe>
-           <p>07/03/2022<br>Exercícios de Português<br> Prof.ª Juliana</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1ghmc7Wro3sAhsK1x-CCInAhP0PPG6Da0/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Acentuação Gráfica</figcaption>
+              <p>Aula Prof.ª Alexandra<br>21/03/2022</p>
+            </figure>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-           <iframe src="https://drive.google.com/file/d/1mSOMhRckIwfrFJBEnsNlWfrB_2Zb6cRA/preview" width="200" height="260" allow="autoplay"></iframe>
-           <p>02/03/2022<br>Apostila de Português</p>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1PlkpTZn64GA21DtZ9bShcFwU_eC0kSUx/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Texto Verde no Verde</figcaption>
+              <p>Aula Prof. Paulo Junges<br>21/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1W97UxYuEaRrldcUa22jHPFpbM5zeWFKJ/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Texto Cesto de Formigueiro</figcaption>
+              <p>Aula Prof. Paulo Junges<br>21/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1jvoGMNBy0TnfWVRhkj_ymWmlqCkieVvy/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Redação - Aula 1</figcaption>
+              <p>Prof.ª Giovana<br>09/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/16OuN43kSsfgs3e44FAofnCzBEk3MGFCu/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Redação - Letras Maiúsculas e Minúsculas</figcaption>
+              <p>Prof.ª Alexandra<br>07/03/2022</p>
+          </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1BBl1qCcTxHYTblJtsuY-B6fs2s6s1_Lq/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Exercícios de Português</figcaption>
+              <p>Prof.ª Juliana<br>07/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1mSOMhRckIwfrFJBEnsNlWfrB_2Zb6cRA/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Apostila de Português</figcaption>
+              <p>02/03/2022</p>
+          </figure>
          </div>
-         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
            <iframe src="https://drive.google.com/file/d/1yuQhuxLw0FmHX4rDIoqJBJPgMoZTRefc/preview" width="260" height="200" allow="autoplay"></iframe>
            <p>Exercícios: Personagens <br> Prof.ª Giovana</p>
          </div>
@@ -116,16 +163,31 @@
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
-              <iframe src="https://drive.google.com/file/d/1sK_2p4NWq8ZLG6cmARhIvKdBXDDuX-W-/preview" width="260" height="160" allow="autoplay"></iframe>
-              <figcaption>Teorema de Pitágoras</figcaption>
-              <p>Prof.º João Carlos<br>10/03/2022</p>
+              <iframe src="https://drive.google.com/file/d/1CR7Kbn6HA9_TtRO9prM7k-YBoc9I_2Y-/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Relações Métricas no Triângulo Retângulo - Apostila</figcaption>
+              <p>Aula 02 - Prof.º João Carlos<br>23/03/2022</p>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
-              <iframe src="https://drive.google.com/file/d/1h28DSewOW3WfmPWHJ3WnG6Cwg82fluLk/preview" width="200" height="260" allow="autoplay"></iframe>
+              <iframe src="https://drive.google.com/file/d/1cnQ-mIlhuBwIc7K9kyAp3T6gN8pluMb-/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Relações Métricas no Triângulo Retângulo - Exercícios</figcaption>
+              <p>Aula 02 - Prof.º João Carlos<br>23/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1sK_2p4NWq8ZLG6cmARhIvKdBXDDuX-W-/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Teorema de Pitágoras - Apostila</figcaption>
+              <p>Aula 01 - Prof.º João Carlos<br>10/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
+              <iframe src="https://drive.google.com/file/d/18wbNQXuyV1bLTKTtSmNMEGfYFmdrnhpx/preview" width="200" height="260" allow="autoplay"></iframe>
               <figcaption>Teorema de Pitágoras - Exercícios</figcaption>
-              <p>Prof.º João Carlos<br>10/03/2022</p>
+              <p>Aula 01 - Prof.º João Carlos<br>10/03/2022</p>
+              <p>(Retificado em 19/03/2022)</p>
             </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
@@ -142,21 +204,21 @@
               <p>Prof.º Roberti André<br>10/03/2022</p>
             </figure>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
               <iframe src="https://drive.google.com/file/d/11jZ0nuE1ixHLzjCNr1Izsrv0uFB504p0/preview" width="200" height="260" allow="autoplay"></iframe>
               <figcaption>Funções - Exercícios</figcaption>
               <p>Prof.º Roberti André<br>10/03/2022</p>
             </figure>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-4">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
               <iframe src="https://drive.google.com/file/d/1K1p_K6Kbm1hpfMBUkSsJSQqs1YftT2ta/preview" width="260" height="160" allow="autoplay"></iframe>
               <figcaption>Tratamento da Informação</figcaption>
               <p>Prof.º Marcelo<br>08/03/2022</p>
             </figure>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="col-12">
             <iframe src="https://drive.google.com/file/d/1TFyEt6Bwejcs5ZahCMzlIstdgpdWdveX/preview" width="200" height="260" allow="autoplay"></iframe>
             <p>06/07/2021 - Lista de Exercícios <br> Regra de Três <br> Prof.º Roberti Filho</p>
           </div>
