--- a/provas-e-simulados.html
+++ b/provas-e-simulados.html
@@ -49,7 +49,8 @@
   <div class="container">
     <div class="container-fluid padding">
       <h6 class="blog">Provas e Simulados</h6>
-      <h6 class="blog">Preparatório CM - Turma Avançada</h6>
+      <h6 class="blog">Preparatório Colégio Militar</h6>
+      <h6 class="blog">Turma Avançada</h6>
       <div class="row text-center">
         <!-- Prova 7 -->
         <div class="col-12">
