--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -163,6 +163,13 @@
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
+              <iframe src="https://drive.google.com/file/d/139Di17UH55uj-VQfGn2rjXIi_X5DtApv/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Conjuntos - Exercícios</figcaption>
+              <p>Prof. Marco<br>24/03/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
               <iframe src="https://drive.google.com/file/d/1CR7Kbn6HA9_TtRO9prM7k-YBoc9I_2Y-/preview" width="260" height="160" allow="autoplay"></iframe>
               <figcaption>Relações Métricas no Triângulo Retângulo - Apostila</figcaption>
               <p>Aula 02 - Prof.º João Carlos<br>23/03/2022</p>
