Atualização de Versão, de 18/04/2022: Atualizados os dados para contato da página inicial.

--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
                   <p>projetoavante00@gmail.com</p>
                   <p>Avenida Gualter Barbosa, 1.206</p>
                   <p>Campo Grande, MS, 79.015-480</p>
+                  <p>(67) 99981-5580 - Prof. João Carlos</p>
                 </div>
                 <div class="col-md-4">
                     <hr>
