--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <div id="slides" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ul class="carousel-indicators">
-            <!-- <li data-target="#slides" data-slide-to="0" class="active"></li> --> 
-            <li data-target="#slides" data-slide-to="0"></li>
+            <li data-target="#slides" data-slide-to="0" class="active"></li>
             <li data-target="#slides" data-slide-to="1"></li>
+            <li data-target="#slides" data-slide-to="2"></li>
             <!-- <li data-target="#slides" data-slide-to="3"></li> -->
             <!-- <li data-target="#slides" data-slide-to="4"></li> -->
             <!-- <li data-target="#slides" data-slide-to="5"></li> -->
@@ -77,10 +77,16 @@
         </ul>
         <!-- The slideshow -->
         <div class="carousel-inner">
-            <!--  <div class="carousel-item active">
-                <a href="agradecimentos.html"><img src="./img/EGO-2022-resultado.png" class="img-fluid"></a> 
+            <div class="carousel-item active">
+                <a href="provas-e-simulados.html"><img src="./img/simulados.png" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
+                <a href="material-de-apoio.html"> <img src="./img/material-de-apoio.png" class="img-fluid"> </a>
+            </div>
+            <div class="carousel-item">
+                <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
+            </div>
+            <!--  <div class="carousel-item">
                 <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2022.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
             </div>
             <div class="carousel-item">
@@ -92,22 +98,16 @@
             <div class="carousel-item">
                 <a href="hotsite-resumo-edital.html"><img src="./img/banner-resumo-edital-cm.jpg" class="img-fluid"></a> 
             </div> -->
-            <!-- <div class="carousel-item">
-                <a href="calendario-de-aulas.html"> <img src="./img/retorno-aulas.jpg" class="img-fluid"> </a>
-            </div> -->
-            <div class="carousel-item active">
-                <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
-            </div>
         </div>
         <!-- Left and right controls -->
-        <!-- <a class="carousel-control-prev" href="#slides" data-slide="prev"> -->
-            <!-- <span class="carousel-control-prev-icon"></span> -->
+        <a class="carousel-control-prev" href="#slides" data-slide="prev"> 
+            <span class="carousel-control-prev-icon"></span>
             <!-- <i class="fas fa-arrow-left"></i> -->
-        <!-- </a> -->
-        <!-- <a class="carousel-control-next" href="#slides" data-slide="next"> -->
-            <!-- <span class="carousel-control-next-icon"></span> -->
+        </a>
+        <a class="carousel-control-next" href="#slides" data-slide="next"> 
+            <span class="carousel-control-next-icon"></span> 
             <!-- <i class="fas fa-arrow-right"></i> -->
-        <!-- </a> -->
+        </a>
     </div>
     <!-- Jumbotron -->
     
