Atualização de Versão #7, de 18/04/2022: Atualizada a chamda da imagem do banner Vídeos Fraternos.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="material-de-apoio.html"> <img src="./img/material-de-apoio.png" class="img-fluid"> </a>
             </div>
             <div class="carousel-item">
-                <a href="espiritismo.html"><img src="./img/cosmos2.png" class="img-fluid" alt="Ensino Religioso"></a>
+                <a href="espiritismo.html"><img src="./img/videos-fraternos.png" class="img-fluid" alt="Ensino Religioso"></a>
             </div>
             <!--  <div class="carousel-item">
                 <a href="hosite-inscricoes-ifms.html"><img src="./img/IFMS-2022.jpg" class="img-fluid" alt="Preparatório IFMS"></a>
